--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
 	"devDependencies": {
 		"@aws-amplify/auth": "^5.1.6",
 		"@playwright/test": "^1.28.1",
-		"@smui/card": "^7.0.0-beta.0",
-		"@smui/floating-label": "^7.0.0-beta.0",
-		"@smui/tab": "^7.0.0-beta.0",
-		"@smui/tab-bar": "^7.0.0-beta.0",
-		"@smui/textfield": "^7.0.0-beta.0",
+		"@smui/button": "^7.0.0-beta.8",
+		"@smui/card": "^7.0.0-beta.8",
+		"@smui/paper": "^7.0.0-beta.8",
+		"@smui/select": "^7.0.0-beta.8",
+		"@smui/tab": "^7.0.0-beta.8",
+		"@smui/tab-bar": "^7.0.0-beta.8",
+		"@smui/textfield": "^7.0.0-beta.8",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
@@ -32,13 +34,15 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"intl": "^1.2.5",
 		"nanoid": "^4.0.1",
 		"normalize.css": "^8.0.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
-		"smui-theme": "^7.0.0-beta.0",
+		"smui-theme": "^7.0.0-beta.8",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"svelte-intl-precompile": "^0.12.1",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0",
